--- a/style/lum-light-to-dark.less
+++ b/style/lum-light-to-dark.less
@@ -28,7 +28,7 @@ dark
 @chroma-lum-7: darken(@base-background-dark, 15%);
 @chroma-lum-8: darken(@base-background-dark, 25%);
 
-@dark-link-color: @chroma-lum-4;
+@dark-link-color: @chroma-lum-3;
 @light-link-color: @chroma-lum-1;
 @chroma-contrast-link-color: contrast(@chroma-lum-6, @dark-link-color, @light-link-color);
 @chroma-contrast-link-color-hover: lighten(@chroma-contrast-link-color, 10%);
